--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="slides">
 				<!-- Slide 1: Title and Email -->
 				<section>
-					<h1>Quarterly Earnings Report</h1>
+					<h1>Quarterly Earnings Report by 24f1000884@ds.study.iitm.ac.in</h1>
 					<p>A Presentation for Stakeholders</p>
 					<p>
 						<small>Contact: 24f1000884@ds.study.iitm.ac.in</small>
