--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="slides">
 				<!-- Slide 1: Title and Email -->
 				<section>
-					<h1>Quarterly Earnings Report by 24f1000884@ds.study.iitm.ac.in</h1>
+					<h1>Quarterly Earnings Report</h1>
 					<p>A Presentation for Stakeholders</p>
 					<p>
 						<small>Contact: 24f1000884@ds.study.iitm.ac.in</small>
@@ -33,6 +33,7 @@
 						- Revenue increased by 15% YoY.
 						- Net profit margin at 22%.
 						- Successful launch of a new product line.
+						- 24f1000884@ds.study.iitm.ac.in
 					</textarea>
 				</section>
 
