--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@
         <!-- Slide 4: Code Sample with Syntax Highlighting -->
         <section>
           <h2>Data Analysis Snippet</h2>
-          <pre>
-<code class="language-python" data-trim data-line-numbers="1-2|4-5">
-import pandas as pd
-import numpy as np
-
-# Calculate quarterly revenue growth
-q3_revenue = 1.15 * q2_revenue
-</code>
-          </pre>
+          <section>
+          <pre><code class="python" data-line-numbers="1-2|4,6-7|9">
+            import pandas as pd
+            import seaborn as sns
+            
+            # Load data
+            data = pd.read_csv('data.csv')
+            
+            # Create visualization
+            sns.scatterplot(data=data, x='x', y='y')
+          </code></pre>
+        </section>
           <aside class="notes">
             Explain the growth calculation; call out highlighted lines step-by-step.
           </aside>
