--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <link rel="stylesheet" href="dist/reveal.css" />
     <link rel="stylesheet" href="dist/theme/black.css" />
 
-    <!-- Syntax highlighting theme -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css" />
   </head>
   <body>
     <div class="reveal">
       <div class="slides">
-        <!-- Slide 1: Title and Email -->
         <section>
           <h1>Quarterly Earnings Report</h1>
           <p>A Presentation for Stakeholders</p>
@@ -28,7 +26,6 @@
           </aside>
         </section>
 
-        <!-- Slide 2: Markdown Content -->
         <section data-markdown>
           <textarea data-template>
 ## Q3 Financial Highlights
@@ -39,7 +36,6 @@
           </textarea>
         </section>
 
-        <!-- Slide 3: Animated Elements (Fragments) -->
         <section>
           <h2>Key Performance Indicators (KPIs)</h2>
           <ul>
@@ -52,8 +48,6 @@
           </aside>
         </section>
 
-        <!-- Slide 4: Code Sample with Syntax Highlighting -->
-        <!-- Slide 4: Code Sample with Syntax Highlighting -->
         <section>
           <h2>Data Analysis Snippet</h2>
           <section>
@@ -73,8 +67,6 @@
           </aside>
         </section>
 
-
-        <!-- Slide 5: Mathematical Equation (Financial Formula) -->
         <section>
           <h2>Compound Annual Growth Rate (CAGR)</h2>
           <p>The formula used for our projections:</p>
@@ -89,11 +81,7 @@
     <script src="dist/reveal.js"></script>
     <script src="plugin/notes/notes.js"></script>
     <script src="plugin/markdown/markdown.js"></script>
-
-    <!-- Highlight plugin -->
     <script src="plugin/highlight/highlight.js"></script>
-
-    <!-- Math plugin -->
     <script src="plugin/math/math.js"></script>
 
     <script>
@@ -103,7 +91,7 @@
           RevealMarkdown,
           RevealHighlight,
           RevealNotes,
-          RevealMath.KaTeX // Pick a typesetter: KaTeX, MathJax2, or MathJax3
+          RevealMath.KaTeX
         ],
       });
     </script>
